# gmd

./: LICENSE  README.md  __init__.py  cli.py  gmd.py  pyproject.toml
