[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmd"
version = "0.0.0"
authors = [
	{ name = "Gliko_PL" },
]
description = "Gliko Markdown Deployer"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cgen = "cli:main"
